# ase_reader

./: .gitignore  CMakeLists.txt  README.md
cmake/: ase_reader-config.cmake.in
include/ase_reader/: ase_exception.hpp  ase_mesh.hpp  ase_object.hpp  ase_reader.hpp  face.hpp  vertex.hpp
src/: CMakeLists.txt  main.cpp
